# skymd

./: .gitmodules  Cargo.toml  LICENSE  README.md  build.rs
src/: chacha20poly1305.rs  curve25519.rs  ffi.rs  lib.rs
